// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Code component aligned 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  text-align: right;
  font-family: 'Roboto Mono','Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro','monospace';
  font-size: 1rem;
  line-height: 1.5rem;
}

<code
  className="c0"
  fontFamily="code"
  fontSize="medium"
>
  Hello
</code>
`;

exports[`A Code component resized 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  font-size: 2.25rem;
  font-family: 'Roboto Mono','Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro','monospace';
  line-height: 2.75rem;
}

<code
  className="c0"
  fontFamily="code"
  fontSize="xxxxlarge"
>
  Hello
</code>
`;

exports[`A Code component weight 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  font-weight: 700;
  font-family: 'Roboto Mono','Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro','monospace';
  font-size: 1rem;
  line-height: 1.5rem;
}

<code
  className="c0"
  fontFamily="code"
  fontSize="medium"
  fontWeight="bold"
>
  Hello
</code>
`;

exports[`A default Code component 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  font-family: 'Roboto Mono','Monaco','Menlo','Ubuntu Mono','Consolas','source-code-pro','monospace';
  font-size: 1rem;
  line-height: 1.5rem;
}

<code
  className="c0"
  fontFamily="code"
  fontSize="medium"
>
  Hello
</code>
`;
